--- a/WebLUCIS/Map/static/Map/main.css
+++ b/WebLUCIS/Map/static/Map/main.css
@@ -45,15 +45,17 @@ body {
 
 /* Style the toggle button */
 #sidebar-toggler {
+    padding: 3px 6px;
     position: fixed;
-    top: 10px;
-    left: 300px;
+    top: 6px;
+    left: 285px;
     color: black;
     border: none;
     cursor: pointer;
     font-size: 1rem;
     margin: 2rem 0;
-    background: beige;
+    background: #d9d9d9;
+    border-radius: 3px;
     z-index: 101; /* Ensure the button is above the sidebar */
     transition: 300ms linear;
 }
