--- a/WebLUCIS/Map/templates/base.html
+++ b/WebLUCIS/Map/templates/base.html
@@ -13,6 +13,10 @@
   <script src="https://unpkg.com/htmx.org@1.9.5"
           integrity="sha384-xcuj3WpfgjlKF+FXhSQFQ0ZNr39ln+hwjN3npfM9VBnUskLolQAcN80McRIVOPuO"
           crossorigin="anonymous"></script>
+  <!-- Tab CSS and ICON-->
+  <link rel="stylesheet" type="text/css" href="{% static 'tab.css' %}">
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.2/font/bootstrap-icons.min.css">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css" integrity="sha512-OKqUSGxH1+Os0p0JljhI0eGEzxmowMFGS+MFnssMFeLd9pEB+ig2C89L1pI2azGxu8qA/f0jvNT2i3x7G5O5Pw==" crossorigin="anonymous" />
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.5/font/bootstrap-icons.css">
   <!-- Custom CSS -->
   <link rel="stylesheet" type="text/css" href="{% static 'Map/main.css' %}">
