--- a/WebLUCIS/Map/static/Map/main.css
+++ b/WebLUCIS/Map/static/Map/main.css
@@ -36,10 +36,12 @@ body {
     top: 0;
     /*left: 10px; !* Adjust the initial left position as needed *!*/
     height: 90vh;
-    width: 250px; /* Adjust the width as needed */
-    /*overflow-y: auto;*/
+    width: 250px;
+    /* Adjust the width as needed */
+    overflow-y: auto;
     margin: 2rem 1rem;
-    z-index: 100; /* Ensure the offcanvas is above other elements */
+    z-index: 100;
+    /* Ensure the offcanvas is above other elements */
     background: #4b4b4b;
 }
 
@@ -56,10 +58,57 @@ body {
     margin: 2rem 0;
     background: #d9d9d9;
     border-radius: 3px;
-    z-index: 101; /* Ensure the button is above the sidebar */
+    z-index: 101;
+    /* Ensure the button is above the sidebar */
     transition: 300ms linear;
 }
 
 .no-sidebar {
     left: 20px !important;
+}
+
+
+/* .color-range-palette {
+    display: none;
+    justify-content: space-between;
+} */
+
+/* .color-range-block {
+    width: 400px;
+    height: 20px;
+    cursor: pointer;
+    border: 1px solid #000;
+    /* Add border for better visibility 
+}*/
+
+#dataTable {
+    border-collapse: collapse;
+    margin-top: 20px;
+    overflow-x: hidden;
+}
+
+#dataTable th,
+#dataTable td {
+    border: 1px solid #ddd;
+    padding: 8px;
+    text-align: center;
+}
+
+.palette-row {
+    display: flex;
+    cursor: pointer;
+    margin-bottom: 5px;
+    /* Changes the cursor to a pointer to indicate clickable elements */
+}
+
+.palette-row:hover {
+    background-color: #f0f0f0;
+    border: 2px solid #000;
+}
+
+.color {
+    height: 10px;
+    flex-grow: 1;
+    flex-basis: calc(100% / 8);
+    transition: transform 0.2s;
 }
