--- a/WebLUCIS/Map/templates/base.html
+++ b/WebLUCIS/Map/templates/base.html
@@ -31,6 +31,7 @@
   <script src="{% static 'Map/AJAX_multiple.js' %}" defer></script>
   <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/chroma-js/2.1.1/chroma.min.js"></script>
+  <script src="https://cdn.jsdelivr.net/npm/mermaid/dist/mermaid.min.js"></script>
   {% endif %}
   {% if title %}
   <title>WebLUCIS - {{ title }}</title>
@@ -52,10 +53,30 @@
       aria-expanded="false" aria-controls="collapseWidthExample" role="button" data-sidebar-toggler>
       <i id="sidebar-toggler-icon" class="bi bi-chevron-left" data-sidebar-icon></i>
     </button>
+
+    <div id="right-sidebar-wrapper" class="row collapse collapse-horizontal">
+      <!-- You can place your form or any other content here -->
+      {% block right_form %}
+      {% endblock %}
+
+    </div>
+
+    <!-- Right Toggler -->
+    <button id="right-sidebar-toggler" class="btn no-rightsidebar" data-bs-toggle="collapse"
+      data-bs-target="#right-sidebar-wrapper" aria-expanded="false" aria-controls="collapseWidthExampleRight"
+      role="button">
+      <i id="right-sidebar-toggler-icon" class="bi bi-chevron-left"></i>
+    </button>
+
+
+
   </div>
+
+
   <!-- Page Content -->
   <main class="container-fluid min-vh-100 p-4">
     <!-- Rest of your page content goes here -->
+
     <div class="container">
       {% block content %}
       {% endblock %}
