--- a/WebLUCIS/Map/templates/base.html
+++ b/WebLUCIS/Map/templates/base.html
@@ -24,6 +24,9 @@
   <script src="{% static 'Map/tab_click.js' %}" defer></script>
   <!-- Custom CSS -->
   <link rel="stylesheet" type="text/css" href="{% static 'Map/main.css' %}">
+  <link rel="stylesheet" type="text/css" href="{% static 'Map/header_tab.css' %}">
+  <link href='https://api.mapbox.com/mapbox-gl-js/v2.10.1/mapbox-gl.css' rel='stylesheet' />
+
   {% if is_map %}
   <link href="https://api.tiles.mapbox.com/mapbox-gl-js/v0.44.1/mapbox-gl.css" rel="stylesheet">
   <script src="https://api.tiles.mapbox.com/mapbox-gl-js/v1.12.0/mapbox-gl.js"></script>
@@ -32,6 +35,10 @@
   <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/chroma-js/2.1.1/chroma.min.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/mermaid/dist/mermaid.min.js"></script>
+  <script src="{% static 'Map/header_tab.js' %}"></script>
+  <script src="https://cdn.jsdelivr.net/npm/mermaid/dist/mermaid.min.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/lz-string/1.4.4/lz-string.min.js"></script>
+
   {% endif %}
   {% if title %}
   <title>WebLUCIS - {{ title }}</title>
@@ -61,6 +68,19 @@
 
     </div>
 
+    <div id="form-tab-container" class="form-tab-container">
+      <button class="add-tab-btn">+</button>
+
+    </div>
+    <!-- <div class="toggle-arrow">
+      <button class="arrow_button" onclick="toggleTabPopup()">
+        ▼
+      </button>
+    </div> -->
+
+
+
+
     <!-- Right Toggler -->
     <button id="right-sidebar-toggler" class="btn no-rightsidebar" data-bs-toggle="collapse"
       data-bs-target="#right-sidebar-wrapper" aria-expanded="false" aria-controls="collapseWidthExampleRight"
@@ -81,6 +101,8 @@
       {% block content %}
       {% endblock %}
     </div>
+
+
   </main>
 
   <!-- Optional JavaScript -->
