--- a/WebLUCIS/Map/templates/base.html
+++ b/WebLUCIS/Map/templates/base.html
@@ -95,8 +95,25 @@
 
 
   </div>
+  <div id="controls" style="position: absolute; bottom: 20px; right: 20px; z-index: 10;">
+    <i id="legend-icon" class="bi bi-bricks" style="width: 50px; height: 50px; cursor: pointer;"></i>
+  </div>
+  <div id="legend"
+    style="position: absolute; bottom: 20px; right: 60px; z-index: 10; background: white; padding: 10px; border: 1px solid black; display: none;">
+  </div>
+  <script>
+    document.getElementById('legend-icon').addEventListener('click', function () {
+      const legend = document.getElementById('legend');
 
-  <div id="legend" style="display:none;"></div>
+      // Toggle visibility
+      if (legend.style.display === 'none') {
+        legend.style.display = 'block';
+      } else {
+        legend.style.display = 'none';
+      }
+    });
+  </script>
+
   <!-- Page Content -->
   <main class="container-fluid min-vh-100 p-4">
     <!-- Rest of your page content goes here -->
