--- a/WebLUCIS/Map/templates/partials/form_tab.html
+++ b/WebLUCIS/Map/templates/partials/form_tab.html
@@ -5,14 +5,12 @@
 
     <div class="row">
         {% for field in form %}
-        <div class="col-md-6 mb-3">
+        <div class="mb-3">
             {{ field.label_tag }}
             {{ field }}
         </div>
-        {% if forloop.counter|divisibleby:2 and not forloop.last %}
     </div>
     <div class="row">
-        {% endif %}
         {% endfor %}
     </div>
     <div class="col-md-2">
